FlowTeam/force-app/main/default/objects/Activity/fields/RateXHs__c.field-meta.xml
<CustomField>
    <fullName>RateXHs__c</fullName>
    <formula>Owner:User.Rate_PerHour__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RateXHs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>