FlowTeam/force-app/main/default/objects/Activity/fields/RealCostxTask__c.field-meta.xml
<CustomField>
    <fullName>RealCostxTask__c</fullName>
    <formula>TaskHsLoaded__c  *  RateXHs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RealCostxTask</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>