FlowTeam/force-app/main/default/objects/Activity/fields/TaskEstimatedHs__c.field-meta.xml
<CustomField>
    <fullName>TaskEstimatedHs__c</fullName>
    <label>TaskEstimatedHs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>