FlowTeam/force-app/main/default/objects/Activity/fields/TaskHsLoaded__c.field-meta.xml
<CustomField>
    <fullName>TaskHsLoaded__c</fullName>
    <label>TaskHsLoaded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>