FlowTeam/force-app/main/default/objects/Activity/fields/TaskHsToLoad__c.field-meta.xml
<CustomField>
    <fullName>TaskHsToLoad__c</fullName>
    <defaultValue>0</defaultValue>
    <label>TaskHsToLoad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>